add jwt authen
