# docs/swagger.json
@@ -115,6 +115,26 @@
                     }
                 }
             }
+        },
+        "/api/v1/login": {
+            "post": {
+                "description": "Login",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Login",
+                "responses": {
+                    "200": {
+                        "description": "Bearer abcd",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
