# main.go
@@ -8,10 +8,13 @@ import (
 	"github.com/jaswdr/faker"
 	"github.com/jinzhu/gorm"
 	_ "github.com/jinzhu/gorm/dialects/sqlite"
+	"github.com/peterngtr/go-fiber-fun/config"
 	book "github.com/peterngtr/go-fiber-fun/controller"
 	"github.com/peterngtr/go-fiber-fun/database"
 	_ "github.com/peterngtr/go-fiber-fun/docs"
+	"github.com/peterngtr/go-fiber-fun/middleware"
 	"github.com/peterngtr/go-fiber-fun/model"
+	"golang.org/x/crypto/bcrypt"
 )
 
 const PORT string = "3000"
@@ -34,6 +37,7 @@ func initDatabase() {
 		panic("failed to connect database")
 	}
 	fmt.Println("Connection Opened to Database")
+	database.DBConn.AutoMigrate(model.Book{}, model.User{})
 	faker := faker.New()
 
 	for i := 1; i < 5; i++ {
@@ -41,11 +45,21 @@ func initDatabase() {
 		book.Title = faker.Person().Name()
 		book.Author = faker.Person().Name()
 		book.Rating = 5
-		fmt.Println(book)
 		database.DBConn.Create(&book)
 	}
 
+	var user model.User
+	hash, err := hashPassword(config.Config("DEFAULT_PASS"))
+	user.Email = "helloworld@test.de"
+	user.Password = hash
+	user.Username = "admin"
+	database.DBConn.Create(&user)
 	fmt.Println("Database Migrated")
+}
+
+func hashPassword(password string) (string, error) {
+	bytes, err := bcrypt.GenerateFromPassword([]byte(password), 14)
+	return string(bytes), err
 }
 
 func main() {
@@ -54,6 +68,8 @@ func main() {
 	app.Get("/", func(c *fiber.Ctx) error {
 		return c.SendString("Hello, World 👋!")
 	})
+	// Login route
+	app.Post("/login", middleware.Login)
 
 	// @title Get Books APIs
 	// @version 1.0
@@ -62,6 +78,11 @@ func main() {
 	// @BasePath /
 	app.Get("/docs/*", swagger.HandlerDefault) // default
 	initDatabase()
+
+	// JWT Middleware
+	//app.Use(jwtware.New(jwtware.Config{
+	//SigningKey: []byte(os.Getenv("SECRET")),
+	//}))
 
 	setupRoutes(app)
 	fmt.Printf("Listening at http://localhost:" + PORT)
